ipc/ipdl/test/ipdl/ok/messageVerifyTopLevel.ipdl
include protocol messageVerify;

intr protocol messageVerifyTopLevel{
  manages messageVerify;
  parent:
    sync messageVerify(uint32_t aParam1) returns (double rv1) verify;
};
