ipc/ipdl/test/ipdl/error/unknownIntrMessage.ipdl
intr protocol unknownSyncMessage {
parent:
    intr Msg();
};
